fix iframe overflow bug

--- a/responsive_images/css/main.css
+++ b/responsive_images/css/main.css
@@ -144,6 +144,7 @@ footer{
 
   .resizable {
     display: block;
+    max-width: 100%;
     width: 400px;
     height: 300px;
     padding: 10px;
